[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["orderandchaos"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = 'src/main.rs'
name = 'zero_to_prod'

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"